<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/searchCityEditView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ellipsize="start"
        android:hint="@string/editTextHint"
        android:imeOptions="actionSearch"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:tooltipText="@string/cityName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/enrolleesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:choiceMode="singleChoice"
        android:fadeScrollbars="true"
        android:smoothScrollbar="true"
        app:layout_constraintBottom_toTopOf="@id/countButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchCityEditView" />

    <Button
        android:id="@+id/countButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:onClick="countButtonOnClick"
        android:text="@string/countButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/filterSwitch"
        app:layout_constraintStart_toEndOf="@id/addButton" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:backgroundTint="@color/greenSubmit"
        android:onClick="addOnClick"
        android:text="@string/addButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/countButton"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/filterSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/filterSwitchText"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/countButton"
        app:layout_constraintTop_toTopOf="@id/countButton" />

</androidx.constraintlayout.widget.ConstraintLayout>